[metadata]
name = tempest
version = 0.0.0a1
author = David Wu
author_email = david.wu1@monash.edu
description = Hospital Transfer Temporal Network Constructor
url = https://github.com/dwu0042/tempest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy >= 1.19.0
    polars >= 0.16.16
    networkx >= 3