[metadata]
name = tempest
version = 0.0.0a2
author = David Wu
author_email = david.wu1@monash.edu
description = Temporal Networks of Hospitals Using Patient Transfers
url = https://github.com/dwu0042/tempest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    numpy >= 1.19.0
    polars >= 1.0
    networkx >= 3

[options.extras_require]
test = pytest